--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -178,6 +178,9 @@
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="SwapChain.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Resources\Shader\default.hlsli" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
